--- a/examples/Imageflow.Server.ExampleDockerDiskCache/Imageflow.Server.ExampleDockerDiskCache.csproj
+++ b/examples/Imageflow.Server.ExampleDockerDiskCache/Imageflow.Server.ExampleDockerDiskCache.csproj
@@ -7,6 +7,7 @@
     <ItemGroup>
       <PackageReference Include="Imageflow.Server" Version="0.8.2" />
       <PackageReference Include="Imageflow.Server.HybridCache" Version="0.7.9" />
+      <PackageReference Include="Imageflow.Server.Storage.RemoteReader" Version="0.8.1">
     </ItemGroup>
 
     <ItemGroup>
